# ai_mcp_daemon_engine

./: .gitignore  README.md  ai_mcp_daemon_postman_collection.json  pyproject.toml
ai_mcp_daemon_engine/: __init__.py  main.py
ai_mcp_daemon_engine/handlers/: auth_router.py  config.py  jwt_cognito.py  jwt_local.py  mcp_app.py  mcp_core.py  mcp_core_engine.py  mcp_handlers.py  mcp_server.py  mcp_server_app.py  mcp_utility.py  middleware.py  schema.py
ai_mcp_daemon_engine/models/: cache.py  mcp_function.py  mcp_function_call.py  mcp_module.py  mcp_setting.py  utils.py
ai_mcp_daemon_engine/mutations/: mcp_configuration.py  mcp_function.py  mcp_function_call.py  mcp_module.py  mcp_setting.py
ai_mcp_daemon_engine/queries/: mcp_function.py  mcp_function_call.py  mcp_module.py  mcp_setting.py
ai_mcp_daemon_engine/types/: mcp_function.py  mcp_function_call.py  mcp_module.py  mcp_setting.py
docs/: DEVELOPMENT_PLAN.md
